--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
     list-style: none;
     text-decoration: none;
     font-family: 'Ubuntu', sans-serif;
+    
 
 }
 main{
@@ -149,6 +150,10 @@ header{
     border-radius: 70px;
     background: white;
     margin-top: 8px;
+    a{
+
+        all: unset;
+    }
 }
 .bottom-grad{
     margin-left: -15px;
